<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:background="#238F35"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:gravity="center"
        android:padding="12dp"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customization"
        android:paddingHorizontal="12dp"
        android:textColor="#000000"
        android:textSize="22sp"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/size"
        android:textStyle="bold"
        android:textSize="18sp"
    />

    <Spinner
        android:id="@+id/listSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/milkChoice"
        android:textStyle="bold"
        android:textSize="18sp"
    />

    <Spinner
        android:id="@+id/listMilk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/sugarChoice"
        android:textStyle="bold"
        android:textSize="18sp"
    />

    <Spinner
        android:id="@+id/listSugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/quantity"
        android:textStyle="bold"
        android:textSize="18sp"
    />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
    >

        <TextView
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_layout_less"
            android:textColor="#000000"
            android:textSize="32sp"
            android:onClick="less"
        />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:layout_marginHorizontal="28dp"
            android:textColor="#000000"
            android:gravity="center"
            android:textSize="26sp"
        />

        <TextView
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_layout_more"
            android:textColor="#000000"
            android:textSize="32sp"
            android:onClick="more"
        />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/brewTea"
        android:layout_marginTop="12dp"
        android:background="#08530B"
        android:textColor="#FFFFFF"
        android:padding="8dp"
        android:onClick="prepare"
    />

</LinearLayout>